--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "expo-dev-client": "~5.0.12",
-    "@react-native-async-storage/async-storage": "^1.18.2"
+    "@react-native-async-storage/async-storage": "^1.18.2",
+    "react-native-svg": "15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
