gradle release key

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -54,3 +54,8 @@ EX_DEV_CLIENT_NETWORK_INSPECTOR=true
 
 # Use legacy packaging to compress native libraries in the resulting APK.
 expo.useLegacyPackaging=false
+
+FASTEN_RELEASE_STORE_FILE=fasten-release-key.keystore
+FASTEN_RELEASE_KEY_ALIAS=fasten-key-alias
+FASTEN_RELEASE_STORE_PASSWORD=tiger12345
+FASTEN_RELEASE_KEY_PASSWORD=tiger12345
