--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -101,6 +101,12 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            storeFile file(FASTEN_RELEASE_STORE_FILE)
+            storePassword FASTEN_RELEASE_STORE_PASSWORD
+            keyAlias FASTEN_RELEASE_KEY_ALIAS
+            keyPassword FASTEN_RELEASE_KEY_PASSWORD
+        }
     }
     buildTypes {
         debug {
@@ -109,7 +115,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             shrinkResources (findProperty('android.enableShrinkResourcesInReleaseBuilds')?.toBoolean() ?: false)
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
