--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-native-webview": "13.12.5",
     "expo-dev-client": "~5.0.12",
     "@react-native-async-storage/async-storage": "^1.18.2",
-    "react-native-svg": "15.8.0"
+    "react-native-svg": "15.8.0",
+    "expo-image-picker": "~16.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
